2007-04-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_l, igraph_evolver_dl) : slight change

	* src/evolver.c (igraph_evolver_d, igraph_evolver_ad)
	(igraph_evolver_ade, igraph_evolver_e, igraph_evolver_de)
	(igraph_evolver_l, igraph_evolver_dl, igraph_evolver_el)
	(igraph_evolver_r, igraph_evolver_ar, igraph_evolver_di)
	(igraph_evolver_adi) : progress bar added

2007-04-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_mes_d, igraph_evolver_error_d) : 
	modify to comply the usual scheme

	* src/evolver.c (igraph_evolver_adi, igraph_evolver_mes_adi)
	(igraph_evolver_st_adi, igraph_evolver_error_adi) : added

2007-04-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_di, igraph_evolver_mes_di)
	(igraph_evolver_st_di, igraph_evolver_error_di) : added

	* src/evolver.c (igraph_evolver_ar, igraph_evolver_mes_ar)
	(igraph_evolver_st_ar, igraph_evolver_error_ar) : added

	* src/evolver.c (igraph_evolver_r, igraph_evolver_mes_r)
	(igraph_evolver_st_r, igraph_evolver_error_r) : added

	* src/evolver.c (igraph_evolver_el, igraph_evolver_mes_el)
	(igraph_evolver_st_el, igraph_evolver_error_el) : added

2007-04-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_dl, igraph_evolver_mes_dl)
	(igraph_evolver_st_dl, igraph_evolver_error_dl) : added

	* src/evolver.c (igraph_evolver_l, igraph_evolver_mes_l)
	(igraph_evolver_st_l, igraph_evolver_error_l) : added

	* src/evolver.c (igraph_evolver_de, igraph_evolver_mes_de)
	(igraph_evolver_st_de, igraph_evolver_error_de) : added

	* src/evolver.c (igraph_evolver_e, igraph_evolver_mes_e)
	(igraph_evolver_st_e, igraph_evolver_error_e) : added

	* src/evolver.c (igraph_evolver_mes_ade) : bug corrected

	* src/evolver.c (igraph_evolver_ade, igraph_evolver_mes_ade)
	(igraph_evolver_st_ade, igraph_evolver_error_ade) : added

	* src/types.c (IGRAPH_ARRAY3_INIT_FINALLY) : added
	* src/array.c (igraph_array3_sum, igraph_array_multiply) : added
